<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">IsItOpen?</string>
    <string name="no_items">No Items To Display</string>
    <string name="menu_insert">Add Item</string>
    <string name="menu_delete">Delete Item</string>
    <string name="title">Title</string>
    <string name="monday">Monday</string>
    <string name="confirm">Confirm</string>
    <string name="edit_item">Edit Item</string>
    <string name="dialog_ok">Okay</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="delete_all">Delete All</string>
    <string name="sunday">Sunday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="menu_edit">Edit Item</string>
</resources>
